Read a feature service response from a file.
Fixes #116885